# fap3-vis

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  README.md  autogen.sh  configure.ac  fap3vis.pc.in
doc/design/: fap3_vis_design.xml
doc/design/pics/: modnav_model.odg  vis_model.odg
examples/modnav/: modnav.chs  modnav2.chs  readme.txt  test_model.chs  test_model_syst.chs  test_model_vert.chs
modules/: avr.chs  avr2.chs  avr2.chs_saved_vertcrp_ctx  container.chs  container.chs_vertdrp_special_column  container2.chs  viscomps.chs  widgets.chs
src/: Makefile.am  agentvr.cpp  agentvr.h  alignment.cpp  alignment.h  button.cpp  button.h  container.cpp  container.h  hlayout.cpp  hlayout.h  label.cpp  label.h  magentvr.h  mcontainer.h  mscel.h  mscene.h  mvisenv.h  mvrcontroller.h  mwidget.h  mwindow.h  plugin.cpp  scene.cpp  scene.h  systdrp.cpp  systdrp.h  utils.h  visenv.cpp  visenv.h  visprof_id.h  visprov.cpp  visprov.h  vissdo.cpp  vissdo.h  vlayout.cpp  vlayout.h  widget.cpp  widget.h
test/: Makefile.am  ut-fap3vis-lib  ut_avr.cpp  ut_avr_node.chs  ut_avr_node_crp_2.chs  ut_avr_node_drp.chs  ut_avr_nodedrp_asr_1.chs  ut_avr_syst_drp_1.chs  ut_avr_vert_drp.chs  ut_avr_vert_drp.chs_saved1  ut_avr_vert_drp_2.chs  ut_avr_vert_drp_3.chs  ut_columns_layout.chs  ut_columns_layout_2.chs  ut_columns_layout_2_mso.chs  ut_columns_layout_3.chs  ut_columns_layout_4.chs  ut_columns_layout_mso.chs  ut_container.cpp  ut_dcntr_1.chs  ut_dcntr_1l.chs  ut_dcntr_2.chs  ut_dcntr_2.chs_saved  ut_dcntr_2_mso.chs  ut_dcntr_3.chs  ut_dcntr_3_mso.chs  ut_dcntr_4.chs  ut_dcntr_4_mso.chs  ut_dhlayout_1.chs  ut_hlayout_1.chs  ut_hlayout_2.chs  ut_hlayout_rmwidget_1.chs  ut_main.cpp  ut_vlayout_1.chs  ut_vlayout_1_init.chs  ut_vlayout_2.chs  ut_vlayout_3.chs  ut_wdg.cpp  ut_wdg_base.chs  ut_wdg_button.chs  (+1 more)
